--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -19,6 +19,7 @@
     "@rainbow-me/rainbowkit": "1.3.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "anon-aadhaar-react": "^0.1.14",
     "blo": "^1.0.1",
     "daisyui": "^3.5.1",
     "jspdf": "^2.5.1",
