--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
+    "@lighthouse-web3/sdk": "^0.3.0",
     "@rainbow-me/rainbowkit": "1.3.0",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "anon-aadhaar-react": "^0.1.14",
     "blo": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "daisyui": "^3.5.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.0",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/crypto-js": "^4",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-copy-to-clipboard": "^5.0.4",
