--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -28,6 +28,7 @@
     "jspdf-autotable": "^3.8.0",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
+    "node-gyp": "^10.0.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
