--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -21,12 +21,14 @@
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "anon-aadhaar-react": "^0.1.14",
+    "axios": "^1.6.2",
     "blo": "^1.0.1",
     "crypto-js": "^4.2.0",
     "daisyui": "^3.5.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.0",
     "next": "^13.1.6",
+    "next-auth": "^4.24.5",
     "nextjs-progressbar": "^0.0.16",
     "node-gyp": "^10.0.1",
     "qrcode.react": "^3.1.0",
