--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,8 +23,10 @@
     "anon-aadhaar-react": "^0.1.14",
     "axios": "^1.6.2",
     "blo": "^1.0.1",
+    "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "daisyui": "^3.5.1",
+    "jotai": "^2.6.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.0",
     "next": "^13.1.6",
@@ -36,6 +38,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "tailwind-merge": "^2.1.0",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "1.19.9",
