--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
   },
   "dependencies": {
+    "jotai": "^2.6.0",
     "leaflet": "^1.9.4",
     "node-gyp": "^10.0.1",
     "react-leaflet": "^4.2.1"
